Podが１つのピアにしか対応できないバグを修正
