# models/peer.xo.go
@@ -4,17 +4,19 @@ package models
 // Code generated by xo. DO NOT EDIT.
 
 import (
+	"database/sql"
 	"errors"
 	"time"
 )
 
 // Peer represents a row from 'comingserver.peers'.
 type Peer struct {
-	ID        uint64    `json:"id"`         // id
-	Code      string    `json:"code"`       // code
-	Token     string    `json:"token"`      // token
-	CreatedAt time.Time `json:"created_at"` // created_at
-	UpdatedAt time.Time `json:"updated_at"` // updated_at
+	ID          uint64       `json:"id"`          // id
+	Code        string       `json:"code"`        // code
+	Token       string       `json:"token"`       // token
+	CreatedAt   time.Time    `json:"created_at"`  // created_at
+	UpdatedAt   time.Time    `json:"updated_at"`  // updated_at
+	Approaching sql.NullBool `json:"approaching"` // approaching
 
 	// xo fields
 	_exists, _deleted bool
@@ -41,14 +43,14 @@ func (p *Peer) Insert(db XODB) error {
 
 	// sql insert query, primary key provided by autoincrement
 	const sqlstr = `INSERT INTO comingserver.peers (` +
-		`code, token, created_at, updated_at` +
+		`code, token, created_at, updated_at, approaching` +
 		`) VALUES (` +
-		`?, ?, ?, ?` +
+		`?, ?, ?, ?, ?` +
 		`)`
 
 	// run query
-	XOLog(sqlstr, p.Code, p.Token, p.CreatedAt, p.UpdatedAt)
-	res, err := db.Exec(sqlstr, p.Code, p.Token, p.CreatedAt, p.UpdatedAt)
+	XOLog(sqlstr, p.Code, p.Token, p.CreatedAt, p.UpdatedAt, p.Approaching)
+	res, err := db.Exec(sqlstr, p.Code, p.Token, p.CreatedAt, p.UpdatedAt, p.Approaching)
 	if err != nil {
 		return err
 	}
@@ -82,12 +84,12 @@ func (p *Peer) Update(db XODB) error {
 
 	// sql query
 	const sqlstr = `UPDATE comingserver.peers SET ` +
-		`code = ?, token = ?, created_at = ?, updated_at = ?` +
+		`code = ?, token = ?, created_at = ?, updated_at = ?, approaching = ?` +
 		` WHERE id = ?`
 
 	// run query
-	XOLog(sqlstr, p.Code, p.Token, p.CreatedAt, p.UpdatedAt, p.ID)
-	_, err = db.Exec(sqlstr, p.Code, p.Token, p.CreatedAt, p.UpdatedAt, p.ID)
+	XOLog(sqlstr, p.Code, p.Token, p.CreatedAt, p.UpdatedAt, p.Approaching, p.ID)
+	_, err = db.Exec(sqlstr, p.Code, p.Token, p.CreatedAt, p.UpdatedAt, p.Approaching, p.ID)
 	return err
 }
 
@@ -138,7 +140,7 @@ func PeerByCode(db XODB, code string) (*Peer, error) {
 
 	// sql query
 	const sqlstr = `SELECT ` +
-		`id, code, token, created_at, updated_at ` +
+		`id, code, token, created_at, updated_at, approaching ` +
 		`FROM comingserver.peers ` +
 		`WHERE code = ?`
 
@@ -148,7 +150,7 @@ func PeerByCode(db XODB, code string) (*Peer, error) {
 		_exists: true,
 	}
 
-	err = db.QueryRow(sqlstr, code).Scan(&p.ID, &p.Code, &p.Token, &p.CreatedAt, &p.UpdatedAt)
+	err = db.QueryRow(sqlstr, code).Scan(&p.ID, &p.Code, &p.Token, &p.CreatedAt, &p.UpdatedAt, &p.Approaching)
 	if err != nil {
 		return nil, err
 	}
@@ -164,7 +166,7 @@ func PeerByID(db XODB, id uint64) (*Peer, error) {
 
 	// sql query
 	const sqlstr = `SELECT ` +
-		`id, code, token, created_at, updated_at ` +
+		`id, code, token, created_at, updated_at, approaching ` +
 		`FROM comingserver.peers ` +
 		`WHERE id = ?`
 
@@ -174,7 +176,7 @@ func PeerByID(db XODB, id uint64) (*Peer, error) {
 		_exists: true,
 	}
 
-	err = db.QueryRow(sqlstr, id).Scan(&p.ID, &p.Code, &p.Token, &p.CreatedAt, &p.UpdatedAt)
+	err = db.QueryRow(sqlstr, id).Scan(&p.ID, &p.Code, &p.Token, &p.CreatedAt, &p.UpdatedAt, &p.Approaching)
 	if err != nil {
 		return nil, err
 	}
