# models/pod.xo.go
@@ -4,21 +4,19 @@ package models
 // Code generated by xo. DO NOT EDIT.
 
 import (
-	"database/sql"
 	"errors"
 	"time"
 )
 
 // Pod represents a row from 'comingserver.pods'.
 type Pod struct {
-	ID          uint64       `json:"id"`          // id
-	Code        string       `json:"code"`        // code
-	Latitude    float64      `json:"latitude"`    // latitude
-	Longitude   float64      `json:"longitude"`   // longitude
-	Approaching sql.NullBool `json:"approaching"` // approaching
-	Token       string       `json:"token"`       // token
-	CreatedAt   time.Time    `json:"created_at"`  // created_at
-	UpdatedAt   time.Time    `json:"updated_at"`  // updated_at
+	ID        uint64    `json:"id"`         // id
+	Code      string    `json:"code"`       // code
+	Latitude  float64   `json:"latitude"`   // latitude
+	Longitude float64   `json:"longitude"`  // longitude
+	Token     string    `json:"token"`      // token
+	CreatedAt time.Time `json:"created_at"` // created_at
+	UpdatedAt time.Time `json:"updated_at"` // updated_at
 
 	// xo fields
 	_exists, _deleted bool
@@ -45,14 +43,14 @@ func (p *Pod) Insert(db XODB) error {
 
 	// sql insert query, primary key provided by autoincrement
 	const sqlstr = `INSERT INTO comingserver.pods (` +
-		`code, latitude, longitude, approaching, token, created_at, updated_at` +
+		`code, latitude, longitude, token, created_at, updated_at` +
 		`) VALUES (` +
-		`?, ?, ?, ?, ?, ?, ?` +
+		`?, ?, ?, ?, ?, ?` +
 		`)`
 
 	// run query
-	XOLog(sqlstr, p.Code, p.Latitude, p.Longitude, p.Approaching, p.Token, p.CreatedAt, p.UpdatedAt)
-	res, err := db.Exec(sqlstr, p.Code, p.Latitude, p.Longitude, p.Approaching, p.Token, p.CreatedAt, p.UpdatedAt)
+	XOLog(sqlstr, p.Code, p.Latitude, p.Longitude, p.Token, p.CreatedAt, p.UpdatedAt)
+	res, err := db.Exec(sqlstr, p.Code, p.Latitude, p.Longitude, p.Token, p.CreatedAt, p.UpdatedAt)
 	if err != nil {
 		return err
 	}
@@ -86,12 +84,12 @@ func (p *Pod) Update(db XODB) error {
 
 	// sql query
 	const sqlstr = `UPDATE comingserver.pods SET ` +
-		`code = ?, latitude = ?, longitude = ?, approaching = ?, token = ?, created_at = ?, updated_at = ?` +
+		`code = ?, latitude = ?, longitude = ?, token = ?, created_at = ?, updated_at = ?` +
 		` WHERE id = ?`
 
 	// run query
-	XOLog(sqlstr, p.Code, p.Latitude, p.Longitude, p.Approaching, p.Token, p.CreatedAt, p.UpdatedAt, p.ID)
-	_, err = db.Exec(sqlstr, p.Code, p.Latitude, p.Longitude, p.Approaching, p.Token, p.CreatedAt, p.UpdatedAt, p.ID)
+	XOLog(sqlstr, p.Code, p.Latitude, p.Longitude, p.Token, p.CreatedAt, p.UpdatedAt, p.ID)
+	_, err = db.Exec(sqlstr, p.Code, p.Latitude, p.Longitude, p.Token, p.CreatedAt, p.UpdatedAt, p.ID)
 	return err
 }
 
@@ -142,7 +140,7 @@ func PodByCode(db XODB, code string) (*Pod, error) {
 
 	// sql query
 	const sqlstr = `SELECT ` +
-		`id, code, latitude, longitude, approaching, token, created_at, updated_at ` +
+		`id, code, latitude, longitude, token, created_at, updated_at ` +
 		`FROM comingserver.pods ` +
 		`WHERE code = ?`
 
@@ -152,7 +150,7 @@ func PodByCode(db XODB, code string) (*Pod, error) {
 		_exists: true,
 	}
 
-	err = db.QueryRow(sqlstr, code).Scan(&p.ID, &p.Code, &p.Latitude, &p.Longitude, &p.Approaching, &p.Token, &p.CreatedAt, &p.UpdatedAt)
+	err = db.QueryRow(sqlstr, code).Scan(&p.ID, &p.Code, &p.Latitude, &p.Longitude, &p.Token, &p.CreatedAt, &p.UpdatedAt)
 	if err != nil {
 		return nil, err
 	}
@@ -168,7 +166,7 @@ func PodByID(db XODB, id uint64) (*Pod, error) {
 
 	// sql query
 	const sqlstr = `SELECT ` +
-		`id, code, latitude, longitude, approaching, token, created_at, updated_at ` +
+		`id, code, latitude, longitude, token, created_at, updated_at ` +
 		`FROM comingserver.pods ` +
 		`WHERE id = ?`
 
@@ -178,7 +176,7 @@ func PodByID(db XODB, id uint64) (*Pod, error) {
 		_exists: true,
 	}
 
-	err = db.QueryRow(sqlstr, id).Scan(&p.ID, &p.Code, &p.Latitude, &p.Longitude, &p.Approaching, &p.Token, &p.CreatedAt, &p.UpdatedAt)
+	err = db.QueryRow(sqlstr, id).Scan(&p.ID, &p.Code, &p.Latitude, &p.Longitude, &p.Token, &p.CreatedAt, &p.UpdatedAt)
 	if err != nil {
 		return nil, err
 	}
